<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.eclip.periodico.detailsActivity.DetailsActivity">

    <data>

        <variable
            name="periodico"
            type="com.example.eclip.periodico.bdd.model.Periodico" />

        <variable
            name="detalles"
            type="com.example.eclip.periodico.detailsActivity.DetailsActivity" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_main_appbarLayout_height"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:collapsedTitleTextAppearance="@style/ThemeOverlay.AppCompat"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="@dimen/activity_main_collapsingToolbarLayout_titleMarginStart"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ImageView
                    android:id="@+id/imgHeader"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/periodico"
                    android:fitsSystemWindows="true"
                    android:scaleType="fitEnd"
                    app:layout_collapseMode="parallax"
                    app:layout_collapseParallaxMultiplier="@dimen/activity_main_imgHeader_collapseParallaxMultiplier" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        tools:layout_editor_absoluteX="8dp"
                        tools:layout_editor_absoluteY="16dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nombre"
                            android:text="@={periodico.name}" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtIcon"
                            android:text="@string/no_url"
                            android:selectAllOnFocus="true"
                            android:inputType="textMultiLine"
                            android:onTextChanged='@{(charSequence, start, before, count) -> detalles.actualizarImg(charSequence, start, before, count)}'
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/icono"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="57dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        tools:layout_editor_absoluteX="8dp">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/txtUrl"
                            android:inputType="textMultiLine"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/url"
                            android:text="@={periodico.url}" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v4.widget.NestedScrollView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:onClick="@{(view) -> detalles.savePeriodico(view)}"
            android:src="@drawable/ic_done"
            app:layout_anchor="@+id/scrollView"
            app:layout_anchorGravity="bottom|right" />

    </android.support.design.widget.CoordinatorLayout>
</layout>
